@@ -52,8 +52,8 @@ def _validatemap(schm, object):
 def _validaterecord(schm, object):
   if not isinstance(object, dict):
     return False
-  for field,fieldschema in schm.getfields():
-    if not validate(fieldschema, object.get(field)):
+  for field in schm.getfields().values():
+    if not validate(field.getschema(), object.get(field.getname())):
       return False
   return True
 
@@ -98,72 +98,240 @@ def validate(schm, object):
 class DatumReader(io.DatumReaderBase):
   """DatumReader for generic python objects."""
 
-  def __init__(self, schm=None):
-    self.setschema(schm)
+  def __init__(self, actual=None, expected=None):
+    self.setschema(actual)
+    self.__expected = expected
     self.__readfn = {
-     schema.BOOLEAN : lambda schm, decoder: decoder.readboolean(),
-     schema.STRING : lambda schm, decoder: decoder.readutf8(),
-     schema.INT : lambda schm, decoder: decoder.readint(),
-     schema.LONG : lambda schm, decoder: decoder.readlong(),
-     schema.FLOAT : lambda schm, decoder: decoder.readfloat(),
-     schema.DOUBLE : lambda schm, decoder: decoder.readdouble(),
-     schema.BYTES : lambda schm, decoder: decoder.readbytes(),
-     schema.FIXED : lambda schm, decoder: 
-                            (decoder.read(schm.getsize())),
+     schema.BOOLEAN : lambda actual, expected, decoder: decoder.readboolean(),
+     schema.STRING : lambda actual, expected, decoder: decoder.readutf8(),
+     schema.INT : lambda actual, expected, decoder: decoder.readint(),
+     schema.LONG : lambda actual, expected, decoder: decoder.readlong(),
+     schema.FLOAT : lambda actual, expected, decoder: decoder.readfloat(),
+     schema.DOUBLE : lambda actual, expected, decoder: decoder.readdouble(),
+     schema.BYTES : lambda actual, expected, decoder: decoder.readbytes(),
+     schema.FIXED : self.readfixed,
      schema.ARRAY : self.readarray,
      schema.MAP : self.readmap,
      schema.RECORD : self.readrecord,
-     schema.ENUM : self.readenum,
-     schema.UNION : self.readunion
+     schema.ENUM : self.readenum
+     }
+    self.__skipfn = {
+     schema.BOOLEAN : lambda schm, decoder: decoder.skipboolean(),
+     schema.STRING : lambda schm, decoder: decoder.skiputf8(),
+     schema.INT : lambda schm, decoder: decoder.skipint(),
+     schema.LONG : lambda schm, decoder: decoder.skiplong(),
+     schema.FLOAT : lambda schm, decoder: decoder.skipfloat(),
+     schema.DOUBLE : lambda schm, decoder: decoder.skipdouble(),
+     schema.BYTES : lambda schm, decoder: decoder.skipbytes(),
+     schema.FIXED : self.skipfixed,
+     schema.ARRAY : self.skiparray,
+     schema.MAP : self.skipmap,
+     schema.RECORD : self.skiprecord,
+     schema.ENUM : self.skipenum,
+     schema.UNION : self.skipunion
      }
 
   def setschema(self, schm):
-    self.__schm = schm
+    self.__actual = schm
 
   def read(self, decoder):
-    return self.readdata(self.__schm, decoder)
-    
-  def readdata(self, schm, decoder):
-    if schm.gettype() == schema.NULL:
+    if self.__expected is None:
+      self.__expected = self.__actual
+    return self.readdata(self.__actual, self.__expected, decoder)
+
+  def readdata(self, actual, expected, decoder):
+    if actual.gettype() == schema.UNION:
+      actual = actual.getelementtypes()[int(decoder.readlong())]
+    if expected.gettype() == schema.UNION:
+      expected = self._resolve(actual, expected)
+    if actual.gettype() == schema.NULL:
       return None
-    fn = self.__readfn.get(schm.gettype())
+    fn = self.__readfn.get(actual.gettype())
+    if fn is not None:
+      return fn(actual, expected, decoder)
+    else:
+      raise schema.AvroException("Unknown type: "+schema.stringval(actual));
+
+  def skipdata(self, schm, decoder):
+    fn = self.__skipfn.get(schm.gettype())
     if fn is not None:
       return fn(schm, decoder)
     else:
-      raise AvroException("Unknown type: "+schema.stringval(schm));
+      raise schema.AvroException("Unknown type: "+schema.stringval(schm));
 
-  def readmap(self, schm, decoder):
+  def readfixed(self, actual, expected, decoder):
+    self.__checkname(actual, expected)
+    if actual.getsize() != expected.getsize():
+      self.__raisematchException(actual, expected)
+    return decoder.read(actual.getsize())
+
+  def skipfixed(self, schm):
+    return decoder.skip(actual.getsize())
+
+  def readmap(self, actual, expected, decoder):
+    if (actual.getvaluetype().gettype() != 
+          expected.getvaluetype().gettype()):
+      self.__raisematchException(actual, expected)
     result = dict()
     size = decoder.readlong()
     if size != 0:
       for i in range(0, size):
         key = decoder.readutf8()
-        result[key] = self.readdata(schm.getvaluetype(), decoder)
+        result[key] = self.readdata(actual.getvaluetype(), 
+                                    expected.getvaluetype(), decoder)
       decoder.readlong()
     return result
 
-  def readarray(self, schm, decoder):
+  def skipmap(self, schm, decoder):
+    size = decoder.readlong()
+    if size != 0:
+      for i in range(0, size):
+        decoder.skiputf8()
+        self.skipdata(schm.getvaluetype(), decoder)
+      decoder.skiplong()
+
+  def readarray(self, actual, expected, decoder):
+    if (actual.getelementtype().gettype() != 
+          expected.getelementtype().gettype()):
+      self.__raisematchException(actual, expected)
     result = list()
     size = decoder.readlong()
     if size != 0:
       for i in range(0, size):
-        result.append(self.readdata(schm.getelementtype(), decoder))
+        result.append(self.readdata(actual.getelementtype(), 
+                                    expected.getelementtype(), decoder))
       decoder.readlong()
     return result
 
-  def readrecord(self, schm, decoder):
-    result = dict() 
-    for field,fieldschema in schm.getfields():
-      result[field] = self.readdata(fieldschema, decoder)
-    return result
+  def skiparray(self, schm, decoder):
+    size = decoder.readlong()
+    if size != 0:
+      for i in range(0, size):
+        self.skipdata(schm.getelementtype(), decoder)
+      decoder.skiplong()
 
-  def readenum(self, schm, decoder):
+  def createrecord(self, schm):
+    return dict()
+
+  def addfield(self, record, name, value):
+     record[name] = value
+
+  def readrecord(self, actual, expected, decoder):
+    self.__checkname(actual, expected)
+    expectedfields = expected.getfields()
+    record = self.createrecord(actual)
+    size = 0 
+    for fieldname, field in actual.getfields().items():
+      if expected == actual:
+        expectedfield = field
+      else:
+        expectedfield = expectedfields.get(fieldname)
+      if expectedfield is None:
+        self.skipdata(field.getschema(), decoder)
+        continue
+      self.addfield(record, fieldname, self.readdata(field.getschema(), 
+                                        expectedfield.getschema(), decoder))
+      size += 1
+    if len(expectedfields) > size:  # not all fields set
+      actualfields = actual.getfields()
+      for fieldname, field in expectedfields.items():
+        if not actualfields.has_key(fieldname):
+          defval = field.getdefaultvalue()
+          if defval is not None:
+            self.addfield(record, fieldname, 
+                      self._defaultfieldvalue(field.getschema(), defval))
+    return record
+
+  def skiprecord(self, schm, decoder):
+    for field in schm.getfields().values():
+      self.skipdata(field.getschema(), decoder)
+
+  def readenum(self, actual, expected, decoder):
+    self.__checkname(actual, expected)
     index = decoder.readint()
-    return schm.getenumsymbols()[index]
+    return actual.getenumsymbols()[index]
 
-  def readunion(self, schm, decoder):
+  def skipenum(self, schm, decoder):
+    decoder.skipint()
+
+  def skipunion(self, schm, decoder):
     index = int(decoder.readlong())
-    return self.readdata(schm.getelementtypes()[index], decoder)
+    return self.skipdata(schm.getelementtypes()[index], decoder)
+
+  def _resolve(self, actual, expected):
+    # scan for exact match
+    for branch in expected.getelementtypes():
+      if branch.gettype() == actual.gettype():
+        return branch
+    #scan for match via numeric promotion
+    for branch in expected.getelementtypes():
+      actualtype = actual.gettype()
+      expectedtype = branch.gettype()
+      if actualtype == schema.INT:
+        if (expectedtype == schema.LONG or expectedtype == schema.FLOAT 
+            or expectedtype == schema.DOUBLE):
+          return branch
+      elif actualtype == schema.LONG:
+        if (expectedtype == schema.FLOAT or expectedtype == schema.DOUBLE):
+          return branch
+      elif actualtype == schema.FLOAT:
+        if (expectedtype == schema.DOUBLE):
+          return branch
+    self.__raisematchException(actual, expected)
+
+  def __checkname(self, actual, expected):
+    if actual.getname() != expected.getname():
+      self.__raisematchException(actual, expected)
+
+  def __raisematchException(self, actual, expected):
+    raise schema.AvroException("Expected "+schema.stringval(expected)+
+                        ", found "+schema.stringval(actual))
+
+  def _defaultfieldvalue(self, schm, defaultnode):
+    if schm.gettype() == schema.RECORD:
+      record = self.createrecord(schm)
+      for field in schm.getfields().values():
+        v = defaultnode.get(field.getname())
+        if v is None:
+          v = field.getdefaultvalue()
+        if v is not None:
+          record[field.getname()] = self._defaultfieldvalue(
+                                                  field.getschema(), v)
+      return record
+    elif schm.gettype() == schema.ENUM:
+      return defaultnode
+    elif schm.gettype() == schema.ARRAY:
+      array = list()
+      for node in defaultnode:
+        array.append(self._defaultfieldvalue(schm.getelementtype(), node))
+      return array
+    elif schm.gettype() == schema.MAP:
+      map = dict()
+      for k,v in defaultnode.items():
+        map[k] = self._defaultfieldvalue(schm.getvaluetype(), v)
+      return map
+    elif schm.gettype() == schema.UNION:
+      return self._defaultfieldvalue(schm.getelementtypes()[0], defaultnode)
+    elif schm.gettype() == schema.FIXED:
+      return defaultnode
+    elif schm.gettype() == schema.STRING:
+      return defaultnode
+    elif schm.gettype() == schema.BYTES:
+      return defaultnode
+    elif schm.gettype() == schema.INT:
+      return int(defaultnode)
+    elif schm.gettype() == schema.LONG:
+      return long(defaultnode)
+    elif schm.gettype() == schema.FLOAT:
+      return float(defaultnode)
+    elif schm.gettype() == schema.DOUBLE:
+      return float(defaultnode)
+    elif schm.gettype() == schema.BOOLEAN:
+      return bool(defaultnode)
+    elif schm.gettype() == schema.NULL:
+      return None
+    else:
+      raise schema.AvroException("Unknown type: "+schema.stringval(actual))
 
 class DatumWriter(io.DatumWriterBase):
   """DatumWriter for generic python objects."""
@@ -233,8 +401,8 @@ class DatumWriter(io.DatumWriterBase):
   def writerecord(self, schm, datum, encoder):
     if not isinstance(datum, dict):
       raise io.AvroTypeException(schm, datum)
-    for field,fieldschema in schm.getfields():
-      self.writedata(fieldschema, datum.get(field), encoder)
+    for field in schm.getfields().values():
+      self.writedata(field.getschema(), datum.get(field.getname()), encoder)
 
   def writeunion(self, schm, datum, encoder):
     index = self.resolveunion(schm, datum)
