@@ -46,6 +46,8 @@ Trunk (unreleased changes)
 
     AVRO-67.  Add per-call RPC metadata to spec. (George Porter via cutting)
 
+    AVRO-28. Add Python support for default values. (sharad via cutting)
+
   IMPROVEMENTS
 
     AVRO-11.  Re-implement specific and reflect datum readers and
